--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "cub"]
 	path = dependencies/cub
 	url = ../cub.git
+[submodule "dependencies/cub"]
+	url = git@github.com:hwinkler/cub.git
